# PMOD-PulseEcho

./: README.md
hardware/: BOMs.xlsx
hardware/demod/PicoRX-ADC(20240229)/: PicoRX-ADC.kicad_pcb  PicoRX-ADC.kicad_prl  PicoRX-ADC.kicad_pro
software/: .gitignore
software/RP-Ice/: pins.md
software/RP-Ice/adc/: CMakeLists.txt  adc.c  adc.pio
software/icebreaker/: Readme.md
software/icebreaker/docs/: ftdi_doc_tuto.mhtml
software/icebreaker/v0/: fifo.ipynb
software/icebreaker/v0/fifo_loop/: .sconsign.dblite  apio.ini  hardware.asc  hardware.json  hardware.out  icebreaker.pcf  top.v
software/icebreaker/v1/: Readme.md  fifo.ipynb
software/icebreaker/v1/verilog/: .sconsign.dblite  async_fifo.v  ft2232h_async_fifo.v  hardware.asc  hardware.json  hardware.out  icebreaker.pcf  top.v  uart_baud_tick_gen.v  uart_rx.v  uart_tx.v
software/pico/: Readme.md  acq.ipynb  pio_adc_dac.uf2  pio_adc_dac_vga.uf2
software/pico/PicoPIO_ADC_DAC_VGA-main/: remarks.md
software/pico/PicoPIO_ADC_DAC_VGA-main/PicoPIO_ADC-main/: CMakeLists.txt  main.c
software/pico/PicoPIO_ADC_DAC_VGA-main/PicoPIO_ADC-main/adc/: adc.c  adc.h  adc.pio
software/pico/PicoPIO_ADC_DAC_VGA-main/PicoPIO_ADC-main/dac/: dac.c  dac.h
software/pico/PicoPIO_ADC_DAC_VGA-main/PicoPIO_ADC-main/vga/: vga.c  vga.h  vga_driver.c  vga_out.pio
software/pico_simple/: CMakeLists.txt  adc.c  adc.pio
